--- a/raw-data-report.qmd
+++ b/raw-data-report.qmd
@@ -3,11 +3,12 @@ title: "Raw Data Report"
 format: html
 ---
 
+
 ```{r}
 #| echo: false
-
-
 library(targets)
+library(ggplot2)
+
 ```
 
 ## (Not really all that) Quick & Dirty
@@ -29,7 +30,8 @@ library(targets)
 
 ```{r}
 #| echo: false
-
+#| warning: false
+#| message: false
 
 tar_visnetwork(outdated = F)
 ```
@@ -40,24 +42,21 @@ Number of trees per city:
 
 ```{r}
 #| echo: false
-tar_load(tree_count_city)
-tree_count_city
+tar_read(tree_count_city)
 ```
 
 Number of tree **species** per city:
 
 ```{r}
 #| echo: false
-tar_load(sp_count_city)
-sp_count_city
+tar_read(sp_count_city)
 ```
 
 Tree size distribution per city:
 
 ```{r}
 #| echo: false
-tar_load(skewness_vis_city)
-skewness_vis_city
+tar_read(skewness_vis_city)
 ```
 
 ## City Scale (CMA level)
@@ -70,8 +69,7 @@ skewness_vis_city
 
 ```{r}
 #| echo: false
-tar_load(city_response_facet)
-city_response_facet
+tar_read(city_response_facet)
 ```
 
 ### Independent Variables - Trees
@@ -80,8 +78,7 @@ city_response_facet
 
 ```{r}
 #| echo: false
-tar_load(city_tree_facet)
-city_tree_facet
+tar_read(city_tree_facet)
 ```
 
 ### Independent Variables - Built Infrastructure
@@ -90,8 +87,7 @@ city_tree_facet
 
 ```{r}
 #| echo: false
-tar_load(city_build_facet)
-city_build_facet
+tar_read(city_build_facet)
 ```
 
 ### Independent Variables - Census
@@ -129,8 +125,7 @@ city_build_facet
 
 ```{r}
 #| echo: false
-tar_load(city_census_facet)
-city_census_facet
+tar_read(city_census_facet)
 ```
 
 
@@ -140,56 +135,48 @@ city_census_facet
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_response_facet)
-neighbourhood_response_facet
+tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_response_pca)
-neighbourhood_response_pca
+tar_read(neighbourhood_response_pca)
 ```
 
 ### Independent Variables - Trees
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_response_facet)
-neighbourhood_response_facet
+tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_tree_pca)
-neighbourhood_tree_pca
+tar_read(neighbourhood_tree_pca)
 ```
 
 ### Independent Variables - Built Infrastructure
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_response_facet)
-neighbourhood_response_facet
+tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_built_pca)
-neighbourhood_built_pca
+tar_read(neighbourhood_build_pca)
 ```
 
 ### Independent Variables - Census
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_response_facet)
-neighbourhood_response_facet
+tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
-tar_load(neighbourhood_census_pca)
-neighbourhood_census_pca
+tar_read(neighbourhood_census_pca)
 ```
 
 ## Street Scale
