make bigger figs

--- a/raw-data-report.qmd
+++ b/raw-data-report.qmd
@@ -1,14 +1,22 @@
 ---
 title: "Raw Data Report"
+execute:
+  echo: false
+  warning: false
+  error: false
 format: html
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = T)
+options(tidyverse.quiet = T)
+```
 
 
 ```{r}
 #| echo: false
 library(targets)
 library(ggplot2)
-
 ```
 
 ## (Not really all that) Quick & Dirty
@@ -32,6 +40,9 @@ library(ggplot2)
 #| echo: false
 #| warning: false
 #| message: false
+#| fig-width: 15
+#| fig-height: 15
+#| output: false
 
 tar_visnetwork(outdated = F)
 ```
@@ -42,6 +53,10 @@ Number of trees per city:
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(tree_count_city)
 ```
 
@@ -49,6 +64,10 @@ Number of tree **species** per city:
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(sp_count_city)
 ```
 
@@ -56,6 +75,10 @@ Tree size distribution per city:
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(skewness_vis_city)
 ```
 
@@ -69,6 +92,10 @@ tar_read(skewness_vis_city)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(city_response_facet)
 ```
 
@@ -78,6 +105,10 @@ tar_read(city_response_facet)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(city_tree_facet)
 ```
 
@@ -87,6 +118,10 @@ tar_read(city_tree_facet)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(city_build_facet)
 ```
 
@@ -125,6 +160,10 @@ tar_read(city_build_facet)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(city_census_facet)
 ```
 
@@ -135,11 +174,19 @@ tar_read(city_census_facet)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_response_pca)
 ```
 
@@ -147,11 +194,19 @@ tar_read(neighbourhood_response_pca)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_tree_pca)
 ```
 
@@ -159,11 +214,19 @@ tar_read(neighbourhood_tree_pca)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_build_pca)
 ```
 
@@ -171,11 +234,19 @@ tar_read(neighbourhood_build_pca)
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_response_facet)
 ```
 
 ```{r}
 #| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 15
+#| fig-height: 15
 tar_read(neighbourhood_census_pca)
 ```
 
